[metadata]
# replace with your username:
name = pyclicommander
version = 0.1.0
author = trez
author_email = tobias.vehkajarvi@gmail.com
description = CLI Command decorator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trez/pyclicommander
project_urls =
    Bug Tracker = https://github.com/trez/pyclicommander/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[flake8]
max-line-length = 120
